--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,11 @@ body{
     text-align: center;
     background-color:#303446 ;
     color: #c6d0f5;
-    padding: 10px;
+    padding: 28px;
     border-radius: 5px;
-    margin: 25px;
-    font-size: xx-large;
+    margin-left: 100px;
+    margin-right: 100px;
+    font-size: 50px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -18,17 +19,22 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #303446;
     color: #eaecf7;
-    padding: 10px;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 30px;
+    padding-bottom: 30px;
     border-radius: 5px;
-    font-size: large;
-    margin: 25px;
+    font-size: 30px;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 .cite-text{
     background-color: #303446;
     color: #dbdde4;
     text-align: center;
     padding: 10px;
-    margin: 25px;
+    margin-left: 100px;
+    margin-right: 100px;
     border-radius: 5px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
